--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "cms:proxy": "netlify-cms-proxy-server"
   },
   "dependencies": {
-    "astro": "^5.8.0"
+    "astro": "^5.8.0",
+    "decap-cms-app": "^3.6.4",
+    "marked": "^15.0.12"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
+    "netlify-cms-proxy-server": "^1.3.24",
     "sass": "^1.89.0"
   }
 }
