--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "cms:proxy": "netlify-cms-proxy-server"
+    "cms:proxy": "netlify-cms-proxy-server",
+    "build:gh": "PUBLIC_BASE_URL=/photographer/ astro build"
   },
   "dependencies": {
     "astro": "^5.8.0",
