--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "marked": "^15.0.12"
   },
   "devDependencies": {
+    "@astrojs/netlify": "^6.5.9",
     "gh-pages": "^6.3.0",
     "netlify-cms-proxy-server": "^1.3.24",
     "sass": "^1.89.0"
