--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
+  repo: usuario/repo
 
 #local_backend: true
 #site_url: "http://localhost:4321"
